<resources>
    <string name="getting_started">Getting Started</string>
    <string name="next">Next</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="verify_your_id_card">Verify your ID Card</string>
    <string name="verify_that_it_s_you">Verify that it\'s you</string>
    <string name="select_a_document_type">Select a document type…</string>
    <string name="to_do_this_we_need_following">To do this, we\'\'ll need the following…</string>
    <string name="term_condition">I have read steps mentioned above</string>
    <string name="you_need_to_take_a_photo">You\'ll need to take a photo.</string>
    <string name="start">Start</string>
    <string name="take_a_selfie">Take a selfie</string>
    <string name="front_side">FRONT SIDE</string>
    <string name="back_side">BACK SIDE</string>
    <string name="i_m_ready">I\'m Ready</string>
    <string name="you_will_need_to_take_a_picture_of_your_document_and_selfie">You will need to take a picture of your document and selfie</string>
    <string name="for_the_best_picture_result">For the best picture results</string>
    <string name="find_an_area_for_good_lighting">Find an area for good lighting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="for_the_best_scan_results">For the best scan results</string>
    <string name="find_an_area_with_good_lighting">Find an area with good lighting</string>
    <string name="make_sure_your_camera_is_at_eye_level">Make sure your camera is at eye level</string>
    <string name="getting_ready">Getting Ready…</string>
    <string name="picture_of_your_s_front">Picture of your %s Front</string>
    <string name="picture_of_your_s_back">Picture of your %s Back</string>
    <string name="take_your_selfie">Take your selfie</string>
    <string name="verify_your_s">Verify your %s</string>
    <string name="analyzing">Analyzing…</string>
    <string name="allow">Allow</string>
    <string name="camera">Camera</string>
    <string name="camera_msg">"This permission required to capture images from camera.\n   "</string>
    <string name="looks_good">Looks Good</string>
    <string name="retake_this_photo">Retake this photo</string>
    <string name="verifying_message">Please wait! We are verifying your identity</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="verification_successful_msg">Your identification verification successful</string>
    <string name="verification_failed_msg">Your identification verification failed</string>
</resources>