<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faceki_backgroundColor"
    android:padding="@dimen/spaceMedium"
    tools:context=".presentation.GettingStartedFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_getting_started"
        style="@style/FaceKiTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spaceLarge"
        android:text="@string/getting_started" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_button"
        android:layout_below="@id/tv_getting_started"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/you_will_need_to_take_a_picture_of_your_document_and_selfie"
                android:textColor="@color/faceki_primaryTextColor"
                android:textSize="18sp" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_guidance" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/for_the_best_picture_result"
                android:textColor="@color/faceki_primaryTextColor"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_desc_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spaceSmall"
                android:gravity="center"
                android:text="@string/find_an_area_for_good_lighting"
                android:textColor="@color/faceki_secondaryTextColor"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/bottom_button"
        layout="@layout/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>