<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faceki_backgroundColor"
    android:fillViewport="true"
    tools:context=".presentation.LottieAnimationFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/spaceExtraLarge"
        android:gravity="center"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_anim_view"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed="1.5" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_success_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/spaceLarge"
                android:layout_marginTop="@dimen/spaceMedium"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                tools:text="@string/successful" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/spaceLarge"
                android:layout_marginTop="@dimen/spaceSmall"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                tools:text="@string/verification_successful_msg" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_loading_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/spaceLarge"
            android:layout_marginTop="@dimen/spaceMedium"
            android:gravity="center_horizontal"
            android:text="@string/verifying_message"
            android:textColor="@color/faceki_titleTextColor"
            android:textSize="18sp"
            android:visibility="gone" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>