<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".presentation.camera.CameraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/rectangle_overlay" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="@dimen/spaceMedium" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_img_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spaceSmall"
            android:textAllCaps="true"
            android:textColor="@color/faceki_titleTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/back_side" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_photo_buttons"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spaceLarge"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/spaceMedium">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_looks_good"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="60dp"
                android:text="@string/looks_good"
                android:textAllCaps="true"
                android:textColor="@color/faceki_titleTextColor"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:strokeColor="@color/faceki_titleTextColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retake"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceSmall"
                android:text="@string/retake_this_photo"
                android:textColor="@android:color/white"
                android:textSize="15sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_camera_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spaceExtraLarge"
            android:padding="@dimen/spaceMedium">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/spaceMedium"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/ic_camera_flip"
                    app:tint="@color/faceki_backgroundColor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flip_camera"
                    android:textColor="@color/faceki_buttonTextColor"
                    android:textSize="10sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:layout_width="60dp"
                android:id="@+id/btn_capture"
                android:layout_height="60dp"
                android:background="@drawable/circular_background_with_stroke">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_camera"
                    app:tint="@color/faceki_buttonBackgroundColor" />

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>